# external-hdr

./: BUILD.bazel  BUILD.cat  BUILD.remote.bazel  WORKSPACE.bazel  defs.bzl  dog.c  repositories.bzl
cat/: cat.c
other/: BUILD.bazel  cat.h
